@@ -52,7 +52,7 @@
         <a href="introduction.xml">Introduction</a> - Basic information about the game including gameplay, modes, weapons.
       </li>
       <li>
-        <a href="interface.xml">The interface</a> - What AssaultCube looks and works like. Read this before you read "<b>The basics</b>".
+        <a href="interface.xml">The interface</a> - What AssaultCube looks and works like.
       </li>
       <li>
         <a href="basics.xml">The basics</a> - Learn how to play AssaultCube, by learning the basics.
