@@ -40,113 +40,6 @@
         where intelligence, infiltration and stealth would be just a waste of time. <i>&ldquo;First shoot, then ask 
         questions later, if anyone´s left to ask&rdquo;</i> is the primary approach to their job.  
     </p>
-
-    <h2>Controls</h2>
-
-    <p>
-        These are the default controls:
-    </p>
-
-    <table>
-        <tr>
-            <td width="150">Escape</td><td>Main menu</td>
-        </tr>
-        <tr>
-            <td>W</td><td>Move forward</td>
-        </tr>
-        <tr>
-            <td>S</td><td>Move backwards</td>
-        </tr>
-        <tr>
-            <td>A</td><td>Sidestep left</td>
-        </tr>
-        <tr>
-            <td>D</td><td>Sidestep right</td>
-        </tr>
-        <tr>
-            <td>Space</td><td>Jump</td>
-        </tr>
-        <tr>
-            <td>Left-shift</td><td>Crouch</td>
-        </tr>
-        <tr>
-            <td>R</td><td>Reload</td>
-        </tr>
-        <tr>
-            <td>T</td><td>Chat and console</td>
-        </tr>
-        <tr>
-            <td>Y</td><td>Team-chat</td>
-        </tr>
-        <tr>
-            <td>G</td><td>Quick nade throw</td>
-        </tr>
-        <tr>
-            <td>B</td><td>Change weapon menu</td>
-        </tr>            
-        <tr>
-            <td>Left mouse-click</td><td>Attack</td>
-        </tr>
-        <tr>
-            <td>Right mouse-click</td><td>Quick nade throw (Or scope when using the sniper rifle)</td>
-        </tr>
-        <tr>
-            <td>Center mouse-click</td><td>Knife</td>
-        </tr>
-        <tr>
-            <td>Mousewheel</td><td>Cycle weapons</td>
-        </tr>
-        <tr>
-            <td>1</td><td>Primary weapon</td>
-        </tr>
-        <tr>
-            <td>2</td><td>Pistol</td>
-        </tr>
-        <tr>
-            <td>3</td><td>Grenade (if available)</td>
-        </tr>
-        <tr>
-            <td>4</td><td>Knife</td>
-        </tr>
-        <tr>
-            <td>Tab</td><td>Show scores</td>
-        </tr>
-        <tr>
-            <td>Left alt</td><td>Show mini-map</td>
-        </tr>
-        <tr>
-            <td>Backspace</td><td>Drop-flag</td>
-        </tr>
-        <tr>
-            <td>F1</td><td>Vote yes</td>
-        </tr>
-        <tr>
-            <td>F2</td><td>Vote no</td>
-        </tr>
-        <tr>
-            <td>F7</td><td>Spectate</td>
-        </tr>
-        <tr>
-            <td>F8</td><td>Follow player (spectate)</td>
-        </tr>
-        <tr>
-            <td>F11</td><td>Show extended console</td>
-        </tr>
-        <tr>
-            <td>F12</td><td>Create screenshot</td>
-        </tr>
-        <tr>
-            <td>V</td><td>Voice-com menu</td>
-        </tr>
-    </table>
-    <p>
-      You can find a list of controls used in map editing <a href="mapediting.xml#controls">here</a>.
-    </p>
-    <p>
-        You can also assign custom keys to specific weapons by using the keybinding menu in-game.
-        This can be found by pressing ESCAPE and then navigating to: settings &rArr; keyboard/mouse controls.
-    </p>
-
     <h2 id="weapons">Weapons</h2>
 
     <p>
