@@ -40,6 +40,7 @@ Feature changes:
 * New sniper scope by Antiklimax.
 * Markers on the HUD indicate the direction where damage was inflicted from.
 * Crosshairs menu automatically loads all crosshairs in the crosshairs folder.
+* More advanced/intuitive interface for changing sound and video options.
 
 
 Small Changes:
